<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.abel.milagecalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message1"
        android:id="@+id/milesText"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:textColor="#4268f4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/gallonsBox"
        android:gravity="center"
        android:background="@drawable/box_border"
        android:layout_below="@+id/mileBox"
        android:layout_alignLeft="@+id/mileBox"
        android:layout_alignStart="@+id/mileBox"
        android:layout_marginTop="83dp" />

    <EditText
        android:gravity="center"
        android:textColor="#4268f4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/mileBox"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false"
        android:background="@drawable/box_border"
        android:layout_below="@+id/milesText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallonsText"
        android:textColor="@android:color/black"

        android:layout_above="@+id/mpgButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/result"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_below="@+id/mpgButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mpgButton"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/gallonsBox"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/corolla"
        android:id="@+id/imageView"
        android:scaleType="fitXY"
        android:maxHeight="70dp"
        android:minHeight="70dp"
        android:maxWidth="70dp"
        android:minWidth="70dp"
        android:contentDescription="@string/car"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:id="@+id/textView"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_alignLeft="@+id/gallonsBox"
        android:layout_alignStart="@+id/gallonsBox" />

</RelativeLayout>
